--- a/quiz.css
+++ b/quiz.css
@@ -32,7 +32,7 @@ h1 	{
 
 
 article h1	{
-	border: 1px solid lightgrey;
+	border: 1px dotted lightgrey;
 	margin-top: 0;
 }
 
@@ -108,23 +108,5 @@ LAYOUT
 #descriptionThree	{
 	min-height: 105px;
 }
-
-
-#descriptionFour	{
-	min-height:
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
